--- a/gui/cargas/carga_debito.ui
+++ b/gui/cargas/carga_debito.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -1051,6 +1054,12 @@ color: #FFFFFF;
   <tabstop>comboBox</tabstop>
   <tabstop>lineEdit_2</tabstop>
   <tabstop>lineEdit_4</tabstop>
+  <tabstop>lineEdit_8</tabstop>
+  <tabstop>lineEdit_7</tabstop>
+  <tabstop>lineEdit_5</tabstop>
+  <tabstop>lineEdit_9</tabstop>
+  <tabstop>lineEdit_10</tabstop>
+  <tabstop>pushButton</tabstop>
  </tabstops>
  <resources/>
  <connections/>
